--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,6 +30,36 @@ body {
     opacity: 0;
 }
 
+#button-section {
+    padding-top: 1.5vh;
+    animation: main-ani 1000ms 1100ms ease forwards;
+    opacity: 0;
+}
+
+.button-item {
+    padding-top : 2vh;
+}
+
+.button-style {
+    width: 20vw;
+    height: 5vh;
+    font-size: 1.15rem;
+    background-color: #bdd2b6;
+    color: rgb(75, 73, 73);
+    border-radius: 8px;
+    border: none;
+}
+
+.button-style:hover {
+    background-color: #91c788;
+    color: rgb(26, 25, 25);
+    box-shadow: 0px 0px 10px 0px rgb(105, 105, 105);
+}
+
+.button-style:focus {
+    outline: none;
+}
+
 @keyframes main-ani {
     from{
         opacity: 0;
