--- a/assets/css/InterviewPage.css
+++ b/assets/css/InterviewPage.css
@@ -1,8 +1,5 @@
 html {
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background: linear-gradient(137deg, #eb6282, rgb(158, 150, 75), #509eb6); 
     background-size: 800% 800%;
     background-repeat: no-repeat;
@@ -16,7 +13,9 @@ html {
 }
 
 #main-contents {
+    margin-top: 18vh;
     text-align: center;
+    padding-bottom: 10vh;
 }
 
 #sub-desc {
@@ -24,6 +23,49 @@ html {
     font-size: 1.1rem;
     font-weight: 530;
     padding-top: 1vh;
+}
+
+#question-contents {
+    padding-top: 10vh;
+    color: rgb(243, 240, 240);
+    font-size: 1.2rem;
+    font-weight: 530;
+}
+
+#question-contents-title {
+    padding-bottom: 2vh;
+    text-align: center;
+}
+
+.question-category {
+    border: rgb(243, 240, 240) solid 2px;
+    border-radius: 10px;
+    width: 50vw;
+    height: 5.5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0vh auto 1.5vh auto;
+    cursor: pointer;
+}
+
+.question-category:hover {
+    box-shadow: 0px 0px 10px 0px rgb(218, 218, 218);
+}
+
+.question-table {
+    color: rgb(230, 227, 227);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 0 auto 5vh auto;
+    display: none;
+    padding-left: 0;
+}
+
+.question-item {
+    display: none;
+    list-style: none;
 }
 
 @keyframes AnimationName {
