--- a/assets/css/InterviewSetting.css
+++ b/assets/css/InterviewSetting.css
@@ -29,6 +29,39 @@ html {
     opacity: 0;
 }
 
+#record-button, #stop-button {
+    opacity: 0;
+    background : none;
+    color: rgb(230, 227, 227);
+    font-size: 1rem;
+    font-weight: 550;
+    padding: 8px 10px;
+    border: rgb(230, 227, 227) solid 1.9px;
+    border-radius: 7px;
+    cursor: pointer;
+    animation: fadeIn 1s 0.9s ease forwards;
+    box-shadow: rgb(93, 93, 92) 0px 0px 6px;
+}
+
+#record-button:hover {
+    box-shadow: rgb(218, 218, 214) 0px 0px 10px;
+}
+
+#record-button:focus {
+    outline: none;
+}
+
+#record-screen {
+    opacity: 0;
+    margin: 5vh auto 4vh auto;
+    width: 50vw;
+    height: 50vh;
+    border: rgb(250, 247, 230) solid 2px;
+    border-radius: 10px;
+    animation: fadeIn 1s 0.9s ease forwards;
+    box-shadow: rgb(66, 66, 66) 0px 0px 8px;
+}
+
 @keyframes gradaitonAni {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
