--- a/assets/css/InterviewSetting.css
+++ b/assets/css/InterviewSetting.css
@@ -56,7 +56,7 @@ html {
 
 #record-screen, #view-screen {
     opacity: 0;
-    margin: 5vh auto 4vh auto;
+    margin: 3vh auto 3vh auto;
     width: 508px;
     height: 380px;
     border: rgb(250, 247, 230) solid 2px;
@@ -67,6 +67,13 @@ html {
 
 #view-screen {
     display: none;
+}
+
+#next-button {
+    margin-top: 2vh;
+    width: 150px;
+    font-size: large;
+    background-color: rgba(124, 124, 121, 0.5);
 }
 
 @keyframes gradaitonAni {
