Actual Interview page add

--- a/assets/css/InterviewStart.css
+++ b/assets/css/InterviewStart.css
@@ -79,7 +79,7 @@ html, body {
     background-color: rgb(91, 167, 202);
     border: rgb(71, 70, 70) solid 1px;
     border-radius: 5px;
-    color: cornsilk;
+    color: rgb(241, 238, 226);
     opacity: 0;
     font-size: 1.4rem;
     padding: 7px 28px;
