interview process finish

--- a/assets/css/ActualInterview.css
+++ b/assets/css/ActualInterview.css
@@ -90,7 +90,7 @@ html, body {
     outline: none;
 }
 
-#play-btn, #re-record-btn {
+#play-btn, #re-record-btn, #next-btn, #interview-fin-btn {
     display: none;
 }
 
