--- a/assets/css/ActualInterview.css
+++ b/assets/css/ActualInterview.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 #main-contents {
-    width: 1000px;
+    width: 90%;
     height: 80%;
     display: flex;
     flex-direction: column;
